name:                luminance-gl
version:             0.1
synopsis:            OpenGL implementation of luminance
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: git://github.com/phaazon/luminance-gl.git

flag debug-gl
  description:         Enable OpenGL stdout debug (for development only)
  default:             False
  manual:              True

library
  ghc-options:         -W -Wall

  exposed-modules:     Graphics.Luminance.Driver.GL33

  other-modules:       Graphics.Luminance.Driver.GL33.Buffer
                     , Graphics.Luminance.Driver.GL33.Cubemap
                     , Graphics.Luminance.Driver.GL33.CubemapArray
                     , Graphics.Luminance.Driver.GL33.Debug
                     , Graphics.Luminance.Driver.GL33.Framebuffer
                     , Graphics.Luminance.Driver.GL33.Pixel
                     , Graphics.Luminance.Driver.GL33.Texture
                     , Graphics.Luminance.Driver.GL33.Texture1D
                     , Graphics.Luminance.Driver.GL33.Texture1DArray
                     , Graphics.Luminance.Driver.GL33.Texture2D
                     , Graphics.Luminance.Driver.GL33.Texture2DArray
                     , Graphics.Luminance.Driver.GL33.Texture3D

  build-depends:       base              >= 4.8  && < 4.9
                     , either            >= 4.4  && < 4.5
                     , gl                >= 0.7  && < 0.8
                     , luminance         >= 0.11 && < 0.12
                     , mtl               >= 2.2  && < 2.3
                     , resourcet         >= 1.1  && < 1.2
                     , transformers      >= 0.4  && < 0.5
                     , transformers-base >= 0.4  && < 0.5
                     , vector            >= 0.11 && < 0.12

  hs-source-dirs:      src

  default-language:    Haskell2010
